# tplink-cloud-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh  pre-commit
src/: config.rs  error.rs  lib.rs  main.rs  resolve.rs
src/api/: client.rs  cloud_type.rs  device_client.rs  errors.rs  mod.rs  response.rs  signing.rs
src/auth/: credentials.rs  keychain.rs  mod.rs  token.rs
src/cli/: auth.rs  devices.rs  energy.rs  info.rs  light.rs  mod.rs  output.rs  power.rs  schedule.rs
src/models/: device.rs  device_info.rs  device_type.rs  energy.rs  light_state.rs  mod.rs  net_info.rs  schedule.rs  time.rs
