[package]
name = "tplc"
version = "0.1.0"
edition = "2021"
description = "CLI for TP-Link Cloud API - control Kasa and Tapo smart home devices"
license = "GPL-3.0"
repository = "https://github.com/piekstra/tplink-cloud-cli"
readme = "README.md"

[[bin]]
name = "tplc"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (signing)
hmac = "0.12"
sha1 = "0.10"
md-5 = "0.10"
base64 = "0.22"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4"] }

# Auth storage
keyring = "3"

# Output
tabled = "0.17"

# Interactive
dialoguer = "0.11"

# Paths
dirs = "6"

# Errors
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
